# tinyscheme

./: CMakeLists.txt  init.scm  scheme.c
